--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,10 @@
 buildscript {
     ext {
-        groovyAllVersion = "2.3.11"
-
-        lombokVersion = "1.16.8"
-
-        //Framework de testes
-        junitVersion = '4.12'
-        mockitoVersion = '1.10.19'
-        cucumberVersion = '1.2.4'
-        gherkinVersion = '2.12.2'
-        hamcrestAllVersion = '1.3'
+        groovyAllVersion = "2.4.15"
 
         //Logging
-        slf4jVersion = '1.7.5'
+        slf4jVersion = '1.7.28'
+        asmVersion = '3.3.1'
     }
     repositories {
         mavenCentral()
@@ -28,10 +20,11 @@ apply plugin: "java"
 apply plugin: "eclipse"
 apply plugin: "idea"
 apply plugin: "application"
+apply plugin: "groovy"
 
 group = 'br.com.douglasffilho'
 
-mainClassName = group + '.JavaGradle.MainApplication'
+mainClassName = group + '.javagradle.MainApplication'
 
 run {
     args += ''
@@ -49,29 +42,25 @@ repositories {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'br.com.douglasffilho.JavaGradle.MainApplication'
+        attributes 'Main-Class': 'br.com.douglasffilho.javagradle.MainApplication'
     }
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
+sourceSets {
+    main {
+        java { srcDirs = [] }
+        groovy { srcDirs += ['src/main/java'] }
+    }
+}
+
 dependencies {
     compile("org.codehaus.groovy:groovy-all:${groovyAllVersion}")
 
-    compile("org.projectlombok:lombok:${lombokVersion}")
-
     compile("org.slf4j:slf4j-api:${slf4jVersion}")
     compile("org.slf4j:slf4j-log4j12:${slf4jVersion}")
+    compile("asm:asm:${asmVersion}")
 
-    testCompile("junit:junit:${junitVersion}")
-    testCompile("org.mockito:mockito-all:${mockitoVersion}")
-    testCompile("org.mockito:mockito-core:${mockitoVersion}")
-    testCompile("org.hamcrest:hamcrest-all:${hamcrestAllVersion}")
-    testCompile("info.cukes:cucumber-jvm:${cucumberVersion}")
-    testCompile("info.cukes:cucumber-core:${cucumberVersion}")
-    testCompile("info.cukes:cucumber-java:${cucumberVersion}")
-    testCompile("info.cukes:cucumber-junit:${cucumberVersion}")
-    testCompile("info.cukes:cucumber-spring:${cucumberVersion}")
-    testCompile("info.cukes:gherkin:${gherkinVersion}")
 }
